# rust-brighton-embedded-day-5

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
