[package]
authors = ["Richard Dallaway <richard@dallaway.com>"]
edition = "2018"
readme = "README.md"
name = "blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f411", "rt"]}
cortex-m-rtfm = "0.5.1"

smart-leds-trait = {version = "0.2.0"}
smart-leds = {version = "0.3.0"}
ws2811-spi = { git = "https://github.com/BrightonRust/ws2811-spi-rs", branch = "master" }
# or, for local hacking...
# ws2811-spi = { path = "../ws2811-spi-rs" } 

# this lets you use `cargo fix`!
[[bin]]
name = "blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
